# libskein

./: CMakeLists.txt  Readme.md  package.json
cmake/: gtest.cmake
emscripten/: emscripten.skein.post.js  makefile
include/skein/: skein.h
src/: skein.c
test/: CMakeLists.txt  gtest.cpp
test/data/: skein.csv
